# prymbot

./: .gitignore  LICENSE  README.md
prymbot/: CMakeLists.txt  package.xml
prymbot_base/: CMakeLists.txt  README.md  package.xml
prymbot_base/config/: lidar.rviz
prymbot_base/launch/: bringup.launch  demo.launch  mb_lidar.launch  minimal.launch
prymbot_base/scripts/: demo_distance.py
prymbot_base/scripts/linux/: README.md  ds4drv.service  pigpiod.service
prymbot_base/src/: pub_odom.cpp
prymbot_camera/: CMakeLists.txt  README.md  package.xml
prymbot_camera/launch/: cam.launch  demo.launch
prymbot_camera/scripts/: cam_pub.py  cam_pub_compressed.py  cam_sub.py  cam_sub_decompressed.py
prymbot_camera/src/: cv_cpp_pub.cpp  cv_cpp_pub_compressed.cpp
prymbot_control/: CMakeLists.txt  README.md  package.xml
prymbot_control/launch/: joy_teleop.launch
prymbot_control/scripts/: joy_teleop.py
prymbot_description/: CMakeLists.txt  README.md  package.xml
prymbot_description/config/: ds4.config.yaml  joint_names_robuino_car.yaml  urdf.rviz
prymbot_description/launch/: display.launch  rviz_xacro.launch
prymbot_description/meshes/: base_link.STL  base_link.dae  front_left_wheel.STL  front_left_wheel.dae  front_right_wheel.STL  rear_right_wheel.STL  rear_right_wheel.dae
prymbot_description/urdf/: prymbot.gazebo.xacro  prymbot.urdf  prymbot.urdf.xacro
prymbot_firmware/: README.md  platformio.ini
prymbot_firmware/lib/GY85/: IMUGY85.h
prymbot_firmware/lib/encoder/: encoder.cpp  encoder.h
prymbot_firmware/lib/motors/: motor.cpp  motor.h
prymbot_firmware/src/: main.cpp
prymbot_gazebo/: CMakeLists.txt  README.md  package.xml
prymbot_gazebo/launch/: gazebo.launch
prymbot_msgs/: CMakeLists.txt  package.xml
prymbot_msgs/msg/: Encoder.msg
prymbot_slam/: CMakeLists.txt  package.xml
prymbot_slam/config/: hector.rviz
prymbot_slam/launch/: gmapping.launch  hector.launch
(+1 files in other folders)
